--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 	<head>
-		<title>Ejemplo 6</title>
+		<title>Intagram Feed Test</title>
 		<meta charset="utf-8">
 		<style type="text/css">
 			.container{
