--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 	</head>
 	<body>
        <script> var access_token = location.hash.split('=')[1];
-        
-        if (location.hash) {
-        
-        } else {
-            location.href="https://instagram.com/oauth/authorize/?display=touch&client_id=[	34c24a06019644a4932092fca65d0f88]&redirect_uri=[https://www.instagram.com/kristian19240/]/&response_type=token";
-        }
-    </script>
+        try {
+			if (location.hash) {
+			
+			} else {
+				location.href="https://instagram.com/oauth/authorize/?display=touch&client_id=[	34c24a06019644a4932092fca65d0f88]&redirect_uri=[https://www.instagram.com/kristian19240/]/&response_type=token";
+			}
+		} catch (error) {
+			document.write("Aun no funciona :C");
+			}
+			
+		</script>
 	</body>
 </html>
