Titulo en el body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		</style>
 	</head>
 	<body>
+		<title> Instagram Feed Prueba</title>
        <script> 
         try {
 //			var access_token = location.hash.split('=')[1];
