Integracion con intagram.js

--- a/index.html
+++ b/index.html
@@ -12,17 +12,24 @@
 	</head>
 	<body>
 		<title> Instagram Feed Prueba</title>
-       <script> 
-        try {
+		
+		<div id="Instafeed"> </div>
+
+
+
+
+	   <script src="./js/instafeed.min.js"> 
+//        try {
 //			var access_token = location.hash.split('=')[1];
 //			if (location.hash) {			
 //			} else {
 //				location.href="https://instagram.com/oauth/authorize/?display=touch&client_id=[34c24a06019644a4932092fca65d0f88]&redirect_uri=[https://www.instagram.com/kristian19240/]/&response_type=token";
 //			}
-		} catch (error) {
-			document.write("Aun no funciona :C");
-			}
-			
+//		} catch (error) {
+//			document.write("Aun no funciona :C");
+//			}
 		</script>
+		<script src="./js/custom.js"></script>
+		
 	</body>
 </html>
