Integración de  jquerty

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
 
 
-
+		<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+  
 	   <script src="./js/instafeed.min.js"> 
 //        try {
 //			var access_token = location.hash.split('=')[1];
@@ -30,6 +34,6 @@
 //			}
 		</script>
 		<script src="./js/custom.js"></script>
-		
+
 	</body>
 </html>
