--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<div id="Instafeed"> </div>
 
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	   	<script src="./js/instafeed.min.js"></script>
 		<script src="./js/custom.js"></script>
 
