--- a/index.html
+++ b/index.html
@@ -8,21 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<style>
-    #rudr_instafeed{
-        list-style:none  
-    }
-    #rudr_instafeed li{
-        float:left;
-        width:200px;
-        height:200px;
-        margin:10px
-    }
-    #rudr_instafeed li img{
-        max-width:100%;
-        max-height:100%;
-    }
-</style>
+<style src="estilo.css"></style>
 <body>
     
     <ul id="rudr_instafeed"></ul>
