--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Instafeed</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
     <script src='main.js'></script>
 </head>
-<style src="./estilo.css"></style>
 <body>
     
     <ul id="rudr_instafeed"></ul>
